@@ -1,3 +1,7 @@
+2014-11-29  Carlos O'Donell  <carlos@redhat.com>
+
+	* elf/ldconfig.c (search_dir): Expand comment.
+
 2014-11-29  Joseph Myers  <joseph@codesourcery.com>
 
 	* conform/Makefile (linknamespace-symlist-stdlibs-base): New
